# C-Post-lesson-exercises

./: CMakeLists.txt  README.md
Chapter 3/: 3-5.c  3-6.c
Chapter 4/: 4-1.c  4-2.c  4-3.c  4-4.c  4-5.c  4-6.c  4-7.c  4-8.c
Chapter 5/: 5-1.c  5-10.c  5-11.c  5-12.c  5-2-1.c  5-2.c  5-3.c  5-4.c  5-5.c  5-6.c  5-7.c  5-8.c  5-9.c
Chapter 6/: 6-1.c  6-10.c  6-2.c  6-3.c  6-4.c  6-5.c  6-6.c  6-7.c  6-8.c  6-9.c
Chapter 7/: 7-1.c  7-10.c  7-11.c  7-12.c  7-2.c  7-3.c  7-4.c  7-5.c  7-6.c  7-7.c  7-8.c  7-9.c
