cmake_minimum_required(VERSION 3.21)
project(C_Post_lesson_exercises C)

set(CMAKE_C_STANDARD 99)

add_executable(C_Post_lesson_exercises main.c)

add_executable(3-5 "Chapter 3/3-5.c")
add_executable(3-6 "Chapter 3/3-6.c")
add_executable(4-1 "Chapter 4/4-1.c")
add_executable(4-2 "Chapter 4/4-2.c")
add_executable(4-3 "Chapter 4/4-3.c")
add_executable(4-4 "Chapter 4/4-4.c")
add_executable(4-5 "Chapter 4/4-5.c")
add_executable(4-6 "Chapter 4/4-6.c")
add_executable(4-7 "Chapter 4/4-7.c")
add_executable(4-8 "Chapter 4/4-8.c")
add_executable(5-1 "Chapter 5/5-1.c")
add_executable(5-2 "Chapter 5/5-2.c")
add_executable(5-2-1 "Chapter 5/5-2-1.c")
add_executable(5-3 "Chapter 5/5-3.c")
add_executable(5-4 "Chapter 5/5-4.c")
add_executable(5-5 "Chapter 5/5-5.c")
add_executable(5-6 "Chapter 5/5-6.c")
add_executable(5-7 "Chapter 5/5-7.c")
add_executable(5-8 "Chapter 5/5-8.c")
add_executable(5-9 "Chapter 5/5-9.c")
add_executable(5-10 "Chapter 5/5-10.c")
add_executable(5-11 "Chapter 5/5-11.c")
add_executable(5-12 "Chapter 5/5-12.c")
add_executable(6-1 "Chapter 6/6-1.c")
add_executable(6-2 "Chapter 6/6-2.c")
add_executable(6-3 "Chapter 6/6-3.c")
add_executable(6-4 "Chapter 6/6-4.c")
add_executable(6-5 "Chapter 6/6-5.c")
add_executable(6-6 "Chapter 6/6-6.c")
add_executable(6-7 "Chapter 6/6-7.c")
add_executable(6-8 "Chapter 6/6-8.c")
add_executable(6-9 "Chapter 6/6-9.c")
add_executable(6-10 "Chapter 6/6-10.c")
add_executable(7-1 "Chapter 7/7-1.c")
add_executable(7-2 "Chapter 7/7-2.c")
add_executable(7-3 "Chapter 7/7-3.c")
add_executable(7-4 "Chapter 7/7-4.c")
add_executable(7-5 "Chapter 7/7-5.c")
add_executable(7-6 "Chapter 7/7-6.c")
add_executable(7-7 "Chapter 7/7-7.c")
add_executable(7-8 "Chapter 7/7-8.c")
add_executable(7-9 "Chapter 7/7-9.c")
add_executable(7-10 "Chapter 7/7-10.c")
add_executable(7-11 "Chapter 7/7-11.c")
add_executable(7-12 "Chapter 7/7-12.c")